--- a/frontend/medops/index.html
+++ b/frontend/medops/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="modal-root"></div> <!-- 👈 Aquí se montarán los modales -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
